feat: add role-based access control (ADMIN can close tickets, EMPLOYEE restricted)